--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,17 @@
       content="width=device-width, initial-scale=1"
     />
     <title>Unsprinkle</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10,100..900;0,100..900&display=swap" rel="stylesheet">
     <style>
-      @font-face {
+      /* @font-face {
         font-family: 'Inter';
         font-style: normal;
-        font-weight: 300 900;
+        font-weight: 100 900;
         font-display: swap;
         src: url(/fonts/Inter-variable.woff2) format('woff2');
-      }
+      } */
     </style>
   </head>
 
